--- a/HWchapter3/MediaGallery.html
+++ b/HWchapter3/MediaGallery.html
@@ -6,36 +6,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Gallery</title>
 </head>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #5a5a5a;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        h1 {
+            color: #ff6e49;
+            text-shadow: #000000 0px 0px 15px;
+        }
+        
+        h2 {
+            color: #f0f0f0;
+            text-shadow: #444444 0px 0px 10px;
+        }
+
+        main {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+        }
+
+        preview, intro, gt3, cayman {
+            background: rgb(150, 150, 150);
+            padding: 20px;
+            border-radius: 8px;
+        }
+
+        video {
+            width: 100%;
+            height: auto;
+            margin-top: 10px;
+        }
+
+        audio {
+            width: 100%;
+            height: 150px;
+            margin-top: 10px;
+        }
+
+        img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+            margin-top: 10px;
+        }
+    </style>
 
 <body>
     <header>
-        <h1>แกลเลอรีสื่อของฉัน</h1>
+        <h1>Porsche Gallery</h1>
     </header>
 
     <main>
-        <section>
-            <h2>วิดีโอแนะนำ</h2>
+        <preview>
+            <h2>Preview</h2>
             <video controls>
-                <source src="media/Drift.mp4" type="video/mp4"> 
+                <source src="media/Drift.mp4" type="video/mp4">
             </video>
-        </section>
+        </preview>
 
-        <section>
-            <h2>เพลงประกอบ</h2>
-            <audio controls>
-                <source src="media/song.mp3" type="audio/mp3"> 
+        <intro>
+            <h2>Intro</h2>
+            <audio controls a>
+                <source src="media/song.mp3" type="audio/mp3">
             </audio>
-        </section>
+        </intro>
 
-        <section>
-            <h2>รูปภาพ 1</h2>
+        <gt3>
+            <h2>Porsche 911 Gt3 R</h2>
             <img src="media/911 gt3.jpg" alt="">
-        </section>
+        </gt3>
 
-        <section>
-            <h2>รูปภาพ 2</h2>
+        <cayman>
+            <h2>Porsche Cayman GT4</h2>
             <img src="media/718 gt3.jpg" alt="">
-        </section>
+        </cayman>
 
     </main>
 </body>
