--- a/HWchapter2/blogpost.html
+++ b/HWchapter2/blogpost.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ตัวอย่าง Blog Post</title>
+    <title>Blog Post</title>
     <style>
         body {
             font-family: Arial, sans-serif;
