--- a/68280009-FinalProject/1_Homepage.html
+++ b/68280009-FinalProject/1_Homepage.html
@@ -38,40 +38,47 @@
             font-size: 70px;
             color: #818181;
             text-shadow: 3px 3px 15px rgba(0, 0, 0, 0.8);
-            margin-bottom: 10px;
+            margin-bottom: 0px;
         }
 
         .head h2 {
-            
+
             font-size: 200px;
             color: #ff0000;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
             font-weight: 300;
         }
 
+        .head h3 {
+
+            font-size: 30px;
+            color: #9b0000;
+            text-shadow: 3px 3px 15px rgba(0, 0, 0, 0.8);
+            margin-bottom: 10px;
+        }
+
         footer {
-            position: absolute;
-            bottom: 50px;
-            
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 15px;
         }
 
-        footer a {
+        .footer-nav a {
             text-decoration: none;
-            color: white;
-            font-size: 16px;
-            background-color: rgba(61, 61, 61, 0.7);
-            padding: 15px 40px;
-            border-radius: 50px;
-            border: 2px solid #777676;
-            backdrop-filter: blur(5px);
-            transition: 0.3s all ease;
+            color: #ffd700;
+            font-size: 14px;
+            background-color: rgba(128, 0, 0, 0.2);
+            padding: 8px 15px;
+            border-radius: 20px;
+            border: 1px solid #800000;
+            transition: 0.3s;
         }
 
-        footer a:hover {
-            background-color: #e74c3c;
+        .footer-nav a:hover {
+            background-color: #800000;
+            color: white;
             transform: scale(1.1);
-            font-size: 18px;
-            color: rgb(255, 255, 255);
         }
     </style>
 
@@ -81,9 +88,12 @@
     <div class="head">
         <h1>ตำนาน</h1>
         <h2>ผีตาโขน</h2>
-        <link href="https://fonts.googleapis.com/css2?family=Itim&family=Maitree:wght@400;700&family=Sriracha&display=swap" rel="stylesheet">
+        <h3>อำเภอด่านซ้าย จังหวัดเลย</h3>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Itim&family=Maitree:wght@400;700&family=Sriracha&display=swap"
+            rel="stylesheet">
     </div>
-    <footer>
+    <footer class="footer-nav">
         <a href="2_Legend.html">ตำนานและความเชื่อ</a>
     </footer>
 </body>
