--- a/68280009-FinalProject/4_Activities.html
+++ b/68280009-FinalProject/4_Activities.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>กิจกรรม</title>
+    <title>Activities</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -105,7 +105,7 @@
         li {
             margin-bottom: 10px;
         }
-        
+
         footer {
             background-color: #000;
             color: #888;
